community/lists/devel/att-18106/attachment
<div dir="ltr">Hi Folks,<div><br></div><div>The UH distcheck is now failing with this compile error:</div><div><br></div><div><pre class="" style="white-space:pre-wrap;word-wrap:break-word;margin-top:0px;margin-bottom:0px;color:rgb(51,51,51);font-size:13px">  CC       pml_ob1_rdma.lo
pml_ob1_irecv.c: In function &#39;mca_pml_ob1_recv&#39;:
pml_ob1_irecv.c:138:28: error: called object &#39;mca_pml_ob1_recvreq&#39; is not a function or function pointer
         mca_pml_ob1_recvreq(recvreq);
                            ^
pml_ob1_irecv.c:39:29: note: declared here
 mca_pml_ob1_recv_request_t *mca_pml_ob1_recvreq = NULL;
                             ^
make[2]: *** [pml_ob1_irecv.lo] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: Leaving directory `/home/hppritcha/jenkins/workspace/ompi_master_pr_disable_dlopen/ompi/mca/pml/ob1&#39;
make[1]: *** [install-recursive] Error 1
make[1]: Leaving directory `/home/hppritcha/jenkins/workspace/ompi_master_pr_disable_dlopen/ompi&#39;
make: *** [install-recursive] Error 1
Build step &#39;Execute shell&#39; marked build as failure
Setting status of 6b9e67cfdb109f87b3fce6047e52e8fe72cdaf4c to FAILURE with url <a href="http://jenkins.open-mpi.org/job/ompi_master_pr_disable_dlopen/303/" style="word-wrap:break-word;color:rgb(92,53,102)">http://jenkins.open-mpi.org/job/ompi_master_pr_disable_dlopen/303/</a> and message: &#39;Build finished. No test results found.&#39;
Using context: LANL-disable-dlopen-check
Test FAILed.</pre></div></div>

